--- a/templates/page/about.html.twig
+++ b/templates/page/about.html.twig
@@ -13,6 +13,9 @@
 				</div>
 			</div>
 		</div>
+
+		{{ include ('partials/_team.html.twig')}}
+		
 		<!-- END fh5co-intro-section -->
 		<div id="fh5co-section">
 			<div class="container">
