--- a/templates/blog/blog.html.twig
+++ b/templates/blog/blog.html.twig
@@ -20,7 +20,7 @@
 					{% for post in posts.results %}
 								<div class="col-sm-6">
 									<div class="section_1">
-										<div><img src="{{ asset('images/index/gallery/' ~ post.image) }}" style="max-width: 100%; height: 500px;"></div>
+										<div><img class="img-responsive center-block" src="{{ asset('images/index/gallery/' ~ post.image) }}" style="max-width: 100%; height: 500px;"></div>
 										<a href="{{ path('single_post', {'slug': post.slug}) }}" class="btn"  style="width: 100%;">{{post.title}}</a>
 										<p style="word-break: break-all; text-overflow: ellipsis;">{{post.content}}</p>
 										<p style="text-align: right;">By {{post.postUser.name}} in {{post.publishedAt | date('d') }} {{ post.publishedAt | date('F') }}</p>
