--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,9 +61,10 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+	
 	</head>
 	<body>
+	{{ include ('partials/_infoProducto.html.twig')}}
 	<div class="box-wrap">
 		<header role="banner" id="fh5co-header">
 			<div class="container">
@@ -95,18 +96,21 @@
 	<!-- END: box-wrap -->
 	
 	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	<script src="{{ asset("js/jquery.min.js") }}"></script>
 	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="{{ asset("js/jquery.easing.1.3.js") }}"></script>
 	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="{{ asset("js/bootstrap.min.js") }}"></script>
 	<!-- Owl carousel -->
-	<script src="js/owl.carousel.min.js"></script>
+	<script src="{{ asset("js/owl.carousel.min.js") }}"></script>
 	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="{{ asset("js/jquery.waypoints.min.js") }}"></script>
 	<!-- Parallax Stellar -->
-	<script src="js/jquery.stellar.min.js"></script>
+	<script src="{{ asset("js/jquery.stellar.min.js") }}"></script>
 	<!-- Main JS (Do not remove) -->
-	<script src="js/main.js"></script>
+	<script src="{{ asset("js/main.js") }}"></script>
+
+	<script src="{{asset('js/app.js')}}"></script>
+	
 	</body>
 </html>
