--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,6 +65,8 @@
 	</head>
 	<body>
 	{{ include ('partials/_infoProducto.html.twig')}}
+	{{ include ('partials/_cartProducto.html.twig')}}
+
 	<div class="box-wrap">
 		<header role="banner" id="fh5co-header">
 			<div class="container">
