--- a/templates/page/product.html.twig
+++ b/templates/page/product.html.twig
@@ -27,7 +27,7 @@
 										<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 										<h2>Precio: {{ product.price }}</h2>
 										
-										<a class="btn btn-primary py-2 px-3" ><img class="img-responsive" style="width: 20px;" src="{{asset('images/index/gallery/1f6d2.png')}}" alt="product"></a>
+										<a class="btn btn-primary py-2 px-3 open-cart-product" data-id="{{product.id}}"><img class="img-responsive" style="width: 20px;" src="{{asset('images/index/gallery/1f6d2.png')}}" alt="product"></a>
 										<a class="btn btn-primary py-2 px-3 open-info-product" data-id="{{product.id}}"><img class="img-responsive" style="width: 20px;" src="{{asset('images/index/gallery/1f441.png')}}" alt="product"></a>
 									</div>
 								</div>
@@ -44,7 +44,7 @@
 										<h3><a href="#">{{ product.name }}</a></h3>
 										<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 										<h2>Precio: {{ product.price }}</h2>
-										<a class="btn btn-primary py-2 px-3" href=""><img class="img-responsive" style="width: 20px;" src="{{asset('images/index/gallery/1f6d2.png')}}" alt="product"></a>
+										<a class="btn btn-primary py-2 px-3 open-cart-product" data-id="{{product.id}}"><img class="img-responsive" style="width: 20px;" src="{{asset('images/index/gallery/1f6d2.png')}}" alt="product"></a>
 										<a class="btn btn-primary py-2 px-3 open-info-product" data-id="{{product.id}}"><img class="img-responsive" style="width: 20px;" src="{{asset('images/index/gallery/1f441.png')}}" alt="product"></a>									</div>
 								</div>
 								<div class="col-md-8 col-md-pull-4 animate-box">
