--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,20 +1,62 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Hello CartController!{% endblock %}
-
+{% block title %}Cart{% endblock %}
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div id="fh5co-intro-section" class="section-overlay animate-box" data-animate-effect="fadeIn">
+        <div class="fh5co-intro-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/intro.jpg);">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2 float-overlay">
+                        <h2>Cart</h2>
+                        <h3>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <!-- Cart Start -->
+    <div class="container py-5">
+        <div class="row g-5">
+            <!-- Cart list Start -->
+            <div class="col-lg-12">
+                {% for item in items %}
+                    <div class="blog-item mb-5" style="padding: 30px;">
+                        <div class="row g-0 bg-light overflow-hidden">
+                            <div class="col-12 col-sm-5 h-100">
+                                <img class="img-fluid h-100" src="{{ asset('productImg/' ~ item.photo) }}" style="width:200px;height:200px;">
+                            </div>
+                            <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                                <div class="p-4 text-right">
+                                    <div class="d-flex mb-3">
+                                        <h4 class="text-uppercase border-start border-5 border-primary ps-3 mb-4 text-right">{{ item.name }}</h4>
+                                        <h4 class="text-uppercase border-start border-5 border-primary ps-3 mb-4 text-right">Precio: {{ item.price }}€</h4>
+                                        <h4 class="text-uppercase border-start border-5 border-primary ps-3 mb-4 text-right">Cantidad: {{ item.quantity }}</h4>
+                                    </div>
+                                    <h5 class="text-uppercase mb-3 text-right">Descripcion del item</h5>
+                                    
+                                    <a href="{{ path('cart_delete', {id: item.id}) }}" class="btn btn-primary py-2 px-4">Remove from cart</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            <!-- Cart list End -->
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/alumno/Documentos/CandelaBlogTienda/src/Controller/CartController.php'|file_link(0) }}">src/Controller/CartController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/alumno/Documentos/CandelaBlogTienda/templates/cart/index.html.twig'|file_link(0) }}">templates/cart/index.html.twig</a></code></li>
-    </ul>
-</div>
+            <!-- Sidebar Start -->
+            <div class="col-lg-12">
+                <!-- Plain Text Start -->
+                <div>
+                    <div class="bg-light text-right" style="padding: 30px;">
+                        <h3 class="text-uppercase border-start border-5 border-primary ps-3 mb-4 text-right">PRECIO TOTAL</h3>
+                        <div class="d-flex mb-3">
+                            <h4 id="totalCart" class="text-uppercase ps-3 mb-4 text-right">{{ totalCart }}€</h4>
+                        </div>
+                        <a href="" class="btn btn-primary py-2 px-4 text-right">BUY</a>
+                    </div>
+                </div>
+                <!-- Plain Text End -->
+            </div>
+            <!-- Sidebar End -->
+        </div>
+    </div>
 {% endblock %}
