--- a/templates/partials/_navigation.html.twig
+++ b/templates/partials/_navigation.html.twig
@@ -14,7 +14,7 @@
 								<li class="{{ (app.request.attributes.get('_route') == 'about')  ? 'active': ''}}"><a href="{{ path('about') }}">About</a></li>
 								<li class="{{ (app.request.attributes.get('_route') == 'contact')  ? 'active': ''}}"><a href="{{ path('contact') }}">Contact</a></li>
 								{% if app.user %}
-									<li class="{{ (app.request.attributes.get('_route') == 'app_cart')  ? 'active': ''}}"><a href="{{ path('app_cart') }}"><i class="fa fa-plus-square sr-icons"></i> Cart</a></li>
+									<li class="{{ (app.request.attributes.get('_route') == 'app_cart' or app.request.attributes.get('_route') == 'cart_delete')  ? 'active': ''}}"><a href="{{ path('app_cart') }}"><i class="fa fa-plus-square sr-icons"></i> Cart</a></li>
 									<li class="{{ (app.request.attributes.get('_route') == 'new_post')  ? 'active': ''}}"><a href="{{ path('new_post') }}"><i class="fa fa-plus-square sr-icons"></i> New post</a></li>
 									<li><a href="{{ path('app_logout') }}"><i class="fa fa-sign-out sr-icons"></i> {{ app.user.name }} - Logout</a></li>
 								{% else %}
